--- a/css/theme.css
+++ b/css/theme.css
@@ -8,6 +8,16 @@
   color: white !important;
 }
 
+[aria-expanded=true] .expanded-indicator {
+  transform: rotate(180deg);
+  transition: transform 200ms ease;
+}
+
+[aria-expanded=false] .expanded-indicator {
+  transform: rotate(360deg);
+  transition: transform 200ms ease;
+}
+
 /*!
  * Bootstrap  v5.3.0-alpha3 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
